# Telegram-make-emoji

./: CMakeLists.txt  README.md  file.cpp  main.cpp  mainWindow.cpp  mainWindow.h  resources.qrc
Resources/Styles/: InputSliderWidgetStyle.css  MainWindow.css
src/converter/: ToWebmConvertor.cpp  videoToGifConverter.cpp  videoToGifConverter.h
src/custom/: InputSliderWidget.cpp  inputsliderwidget.cpp  inputsliderwidget.h
src/main/: MainWindow.cpp  MainWindow.h  main.cpp  mainWindow.cpp  mainWindow.h
src/model/: ConvertItem.cpp  ConvertItem.h  ConvertItemListModel.cpp  ConvertItemListModel.h  convertItemDelegate.cpp  convertItemDelegate.h  file.cpp  file.h  fileDelegate.cpp  fileDelegate.h  filesListModel.cpp  filesListModel.h
src/utility/: FFmpegUtility.cpp  FFmpegUtility.h  MultiIndex.h  ffmpegUtility.cpp  multiIndex.h  styleSheetUtility.h
